aprimorando css e html

--- a/Loja.html
+++ b/Loja.html
@@ -7,7 +7,7 @@
       canvas{border:1px solid black;}
       div{display:flex; width:100%; height:100%; align-items:center; justify-content:center;}
     </style>
-    <script src="Loja.css"></script>
+    <link rel="stylesheet" type="text/css" href="Loja.css">
     <script src="gl.js"></script>
     <script src="Math.js"></script>
     <script src="Shaders.js"></script>
