--- a/Loja.html
+++ b/Loja.html
@@ -1,12 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <style>
-      html,body{margin:0px; padding:0px; width:100%; height:100%;}
-      body{background-color:#404040;}
-      canvas{border:1px solid black;}
-      div{display:flex; width:100%; height:100%; align-items:center; justify-content:center;}
-    </style>
+    <link rel="icon" href="minecraft-icon-16x16-22.png" type="image/png">
     <link rel="stylesheet" type="text/css" href="Loja.css">
     <script src="gl.js"></script>
     <script src="Math.js"></script>
@@ -24,8 +19,6 @@
     var gGridFloor, mDebugVerts, mDebugLine;
 
     window.addEventListener("load",function(){
-      //....................................
-      //System Setup
       gl = GLInstance("glcanvas").fFitScreen(0.95,0.9).fClear();
 
       gCamera = new Camera(gl);
@@ -36,12 +29,10 @@
       gRLoop = new RenderLoop(onRender,30);
 
       //....................................
-      //Load up resources
+      //carregando resources
       Resources.setup(gl,onReady).loadTexture("atlas","atlas_mindcraft.png").start();
     });
 
-    //==================================================
-    //When Main System is setup and all resources are downloaded.
     function onReady(){
       //Setup Test Shader, Modal, Meshes
       gShader = new ShaderBuilder(gl,"vertex_shader","fragment_shader")
@@ -51,10 +42,6 @@
                 ,"uFaces","2fv")
         .prepareTextures("uAltas","atlas")
         .setUniforms("uPMatrix",gCamera.projectionMatrix);
-              //,"uFaces", [8,0, 8,0, 8,0, 10,0, 8,0, 9,0] ); //Front,Back,Left,Bottom,Right,Top
-
-      //gModel = Primatives.Cube.createModal(gl,"Cube",true)
-      //		.setPosition(0,0.6,0);//.setScale(0.7,0.7,0.7);
 
       var cubemesh = Primatives.Cube.createMesh(gl,"Cube",1,1,1,0,0,0,false);
       for(var i=0; i < 6; i++){
@@ -67,11 +54,11 @@
 
     var gCubes = [];
     var texMap = [
-      [3,0, 3,0, 3,0, 2,0, 3,0, 2,9],			//GrassDirt
-      [4,1, 4,1, 4,1, 5,1, 4,1, 5,1],			//Log
-      [11,1, 10,1, 10,1, 9,1, 10,1, 9,1],		//Chest
-      [7,7, 6,7, 6,7, 6,7, 6,7, 6,6],			//Pumpkin
-      [8,8, 8,8, 8,8, 9,8, 8,8, 9,8],			//WaterMelon
+      [3,0, 3,0, 3,0, 2,0, 3,0, 2,9],			//Grama
+      [4,1, 4,1, 4,1, 5,1, 4,1, 5,1],			//Tronco
+      [11,1, 10,1, 10,1, 9,1, 10,1, 9,1],	//Bau
+      [7,7, 6,7, 6,7, 6,7, 6,7, 6,6],			//Abobora
+      [8,8, 8,8, 8,8, 9,8, 8,8, 9,8],			//Melancia
       [8,0, 8,0, 8,0, 10,0, 8,0, 9,0]			//TNT
     ];
     function onRender(dt){
@@ -90,7 +77,11 @@
   </head>
   <body>
     <header>
+      <div>
+      <img src="pngwing.com.png" alt="Logo" width="50" height="50">
       <h1>Loja ao Cubo</h1>
+      </div>
+      <div>
       <nav>
         <ul>
           <li><a href="#">Produtos</a></li>
