--- a/Loja.html
+++ b/Loja.html
@@ -14,66 +14,14 @@
     <script src="Debug.js"></script>
     <script src="GridFloor.js"></script>
     <script src="Resources.js"></script>
-    <script>
-    var gl, gRLoop,	gShader, gModel, gCamera, gCameraCtrl;
-    var gGridFloor, mDebugVerts, mDebugLine;
-
-    window.addEventListener("load",function(){
-      gl = GLInstance("glcanvas").fFitScreen(0.95,0.9).fClear();
-
-      gCamera = new Camera(gl);
-      gCamera.transform.position.set(0,1,3);
-      gCameraCtrl = new CameraController(gl,gCamera);
-
-      gGridFloor = new GridFloor(gl);
-      gRLoop = new RenderLoop(onRender,30);
-
-      //....................................
-      //carregando resources
-      Resources.setup(gl,onReady).loadTexture("atlas","atlas_mindcraft.png").start();
-    });
-
-    function onReady(){
-      //Setup Test Shader, Modal, Meshes
-      gShader = new ShaderBuilder(gl,"vertex_shader","fragment_shader")
-        .prepareUniforms("uPMatrix","mat4"
-                ,"uMVMatrix","mat4"
-                ,"uCameraMatrix","mat4"
-                ,"uFaces","2fv")
-        .prepareTextures("uAltas","atlas")
-        .setUniforms("uPMatrix",gCamera.projectionMatrix);
-
-      var cubemesh = Primatives.Cube.createMesh(gl,"Cube",1,1,1,0,0,0,false);
-      for(var i=0; i < 6; i++){
-        var model = new Modal(cubemesh).setPosition( (i%3)*2 , 0.6 , Math.floor(i/3) * -2);
-        gCubes.push(model);
-      }
-
-      gRLoop.start();
-    }
-
-    var gCubes = [];
-    var texMap = [
-      [3,0, 3,0, 3,0, 2,0, 3,0, 2,9],			//Grama
-      [4,1, 4,1, 4,1, 5,1, 4,1, 5,1],			//Tronco
-      [11,1, 10,1, 10,1, 9,1, 10,1, 9,1],	//Bau
-      [7,7, 6,7, 6,7, 6,7, 6,7, 6,6],			//Abobora
-      [8,8, 8,8, 8,8, 9,8, 8,8, 9,8],			//Melancia
-      [8,0, 8,0, 8,0, 10,0, 8,0, 9,0]			//TNT
-    ];
-    function onRender(dt){
-      gl.fClear();
-
-      gCamera.updateViewMatrix();
-      gGridFloor.render(gCamera);
-      gShader.preRender("uCameraMatrix",gCamera.viewMatrix);
-
-      for(var i=0; i < gCubes.length; i++){
-        gShader.setUniforms("uFaces",texMap[i]).renderModel( gCubes[i].preRender() );
-      }
-    }
-  </script>
-    <title>Loja ao Cubo</title>
+    <script src="cubo1.js"></script>
+    <script src="cubo2.js"></script>
+    <script src="cubo3.js"></script>
+    <script src="cubo4.js"></script>
+    <script src="cubo5.js"></script>
+    <script src="cubo6.js"></script>
+    
+  <title>Loja ao Cubo</title>
   </head>
   <body>
     <header>
@@ -93,7 +41,14 @@
         </div>
       </main>
     </header>
-    <div><canvas id="glcanvas"></canvas></div>
+    <div class="canvas-grid">
+      <canvas id="glcanvas1"></canvas>
+      <canvas id="glcanvas2"></canvas>
+      <canvas id="glcanvas3"></canvas>
+      <canvas id="glcanvas4"></canvas>
+      <canvas id="glcanvas5"></canvas>
+      <canvas id="glcanvas6"></canvas>
+    </div>
 
  	<script id="vertex_shader" type="x-shader/x-vertex">#version 300 es
  		in vec4 a_position;
