--- a/Loja.html
+++ b/Loja.html
@@ -43,12 +43,17 @@
     </header>
     <div class="canvas-grid">
       <canvas id="glcanvas1"></canvas>
+      <p class="canvas-description">Cubo de Grama</p>
       <canvas id="glcanvas2"></canvas>
+      <p class="canvas-description">Cubo de um Tronco de Árvore</p>
       <canvas id="glcanvas3"></canvas>
+      <p class="canvas-description">Cubo de um Bau</p>
       <canvas id="glcanvas4"></canvas>
+      <p class="canvas-description">Cubo de uma Abobora de Helloween</p>
       <canvas id="glcanvas5"></canvas>
+      <p class="canvas-description">Cubo de uma TNT</p>
       <canvas id="glcanvas6"></canvas>
-      
+      <p class="canvas-description">Cubo de Minerio de Diamante</p>
     </div>
  	<script id="vertex_shader" type="x-shader/x-vertex">#version 300 es
  		in vec4 a_position;
