--- a/Loja.html
+++ b/Loja.html
@@ -4,6 +4,11 @@
     <link rel="icon" href="minecraft-icon-16x16-22.png" type="image/png">
     <link rel="stylesheet" type="text/css" href="Loja.css">
     <script src="gl.js"></script>
+    <script src="gl2.js"></script>
+    <script src="gl3.js"></script>
+    <script src="gl4.js"></script>
+    <script src="gl5.js"></script>
+    <script src="gl6.js"></script>
     <script src="Math.js"></script>
     <script src="Shaders.js"></script>
     <script src="RenderLoop.js"></script>
@@ -67,36 +72,6 @@
       <p class="canvas-description">Cubo de Minerio de Diamante</p>
       </div>
     </div>
- 	<script id="vertex_shader" type="x-shader/x-vertex">#version 300 es
- 		in vec4 a_position;
- 		in vec3 a_norm;
- 		in vec2 a_uv;
-
- 		uniform mat4 uPMatrix;
- 		uniform mat4 uMVMatrix;
- 		uniform mat4 uCameraMatrix;
- 		uniform vec2[6] uFaces;
- 		out highp vec2 vUV;
-
- 	  const float size = 1.0/16.0;
-
- 		void main(void){
- 			int f = int(a_position.w);
- 			float u = uFaces[f].x * size + a_uv.x * size;
- 			float v = uFaces[f].y * size + a_uv.y * size;
- 			vUV = vec2(u,v);
-
- 			gl_Position = uPMatrix * uCameraMatrix * uMVMatrix * vec4(a_position.xyz, 1.0); 
- 		}
- 	</script>
- 	<script id="fragment_shader" type="x-shader/x-fragment">#version 300 es
- 		precision mediump float;
- 		uniform sampler2D uAltas;
- 		in highp vec2 vUV;
- 		out vec4 outColor;
-
- 		void main(void){ outColor = texture(uAltas,vUV); }
- 	</script>
     <footer>
       <p>Loja Cubo - Autor Cleber Junior</p>
     </footer>
