arrumando html aux

--- a/cubo5.html
+++ b/cubo5.html
@@ -35,7 +35,8 @@
       <main>
         </div>
       </main>
-    </header>os">
+    </header>
+      <div class="canvas-cubos">
       <canvas id="glcanvas5"></canvas>
       <p class="canvas-description">Cubo de uma TNT</p>
       </div>
