--- a/Loja.html
+++ b/Loja.html
@@ -15,9 +15,9 @@
       <div>
       <nav>
         <ul>
-          <li><a href="#">Produtos</a></li>
-          <li><a href="#">Visualizar Tudo</a></li>
-          <li><a href="#">Carrinho</a></li>
+          <button onclick="window.location.href='Loja.html'">Produtos</button>
+          <button onclick="window.location.href='cubos.html'">Visualizar tudo</button>
+          <button onclick="window.location.href='Carrinho.html'">Carrinho</button>
         </ul>
       </nav>
       <main>
@@ -26,21 +26,27 @@
     </header>
     <div class="canvas-grid">
       <div class="canvas-cubos">
+      <img src="Grass_Block.png" alt="Cubo de Grama">
       <p class="canvas-description">Cubo de Grama</p>
       </div>
       <div class="canvas-cubos">
+      <img src="Oak_Log_%28UD%29_JE5_BE3.png" alt="Cubo de um Tronco de Árvore">
       <p class="canvas-description">Cubo de um Tronco de Árvore</p>
       </div>
       <div class="canvas-cubos">
+      <img src="Chest_Pre-Beta_1.8.png" alt="Cubo de um Bau">
       <p class="canvas-description">Cubo de um Bau</p>
       </div>
       <div class="canvas-cubos">
+      <img src="Carved_Pumpkin_%28S%29_JE4.png" alt="Cubo de uma Abobora de Helloween">
       <p class="canvas-description">Cubo de uma Abobora de Helloween</p>
       </div>
       <div class="canvas-cubos">
+      <img src="Dinamite.png" alt="Cubo de uma TNT">
       <p class="canvas-description">Cubo de uma TNT</p>
       </div>
       <div class="canvas-cubos">
+      <img src="Diamond_Ore_JE5_BE5.png" alt="Cubo de Minerio de Diamante">
       <p class="canvas-description">Cubo de Minerio de Diamante</p>
       </div>
     </div>
