--- a/cubo6.html
+++ b/cubo6.html
@@ -27,9 +27,9 @@
       <div>
       <nav>
         <ul>
-          <li><a href="#">Produtos</a></li>
-          <li><a href="#">Visualizar Tudo</a></li>
-          <li><a href="#">Carrinho</a></li>
+          <button onclick="window.location.href='Loja.html'">Produtos</button>
+          <button onclick="window.location.href='cubos.html'">Visualizar tudo</button>
+          <button onclick="window.location.href='Carrinho.html'">Carrinho</button>
         </ul>
       </nav>
       <main>
