ajuste html e css

--- a/Loja.html
+++ b/Loja.html
@@ -26,28 +26,40 @@
     </header>
     <div class="canvas-grid">
       <div class="canvas-cubos">
+      <a href="cubo1.html">
       <img src="Grass_Block.png" alt="Cubo de Grama">
       <p class="canvas-description">Cubo de Grama</p>
+      </a>
       </div>
       <div class="canvas-cubos">
-      <img src="Oak_Log_%28UD%29_JE5_BE3.png" alt="Cubo de um Tronco de Árvore">
+      <a href="cubo2.html">
+      <img src="Log.png" alt="Cubo de um Tronco de Árvore">
       <p class="canvas-description">Cubo de um Tronco de Árvore</p>
+      </a>
       </div>
       <div class="canvas-cubos">
+      <a href="cubo3.html">  
       <img src="Chest_Pre-Beta_1.8.png" alt="Cubo de um Bau">
       <p class="canvas-description">Cubo de um Bau</p>
+      </a>
       </div>
       <div class="canvas-cubos">
-      <img src="Carved_Pumpkin_%28S%29_JE4.png" alt="Cubo de uma Abobora de Helloween">
+      <a href="cubo4.html">
+      <img src="Carved_Pumpkin.png" alt="Cubo de uma Abobora de Helloween">
       <p class="canvas-description">Cubo de uma Abobora de Helloween</p>
+      </a>
       </div>
       <div class="canvas-cubos">
+      <a href="cubo5.html">
       <img src="Dinamite.png" alt="Cubo de uma TNT">
       <p class="canvas-description">Cubo de uma TNT</p>
+      </a>
       </div>
       <div class="canvas-cubos">
+      <a href="cubo6.html">
       <img src="Diamond_Ore_JE5_BE5.png" alt="Cubo de Minerio de Diamante">
       <p class="canvas-description">Cubo de Minerio de Diamante</p>
+      </a>
       </div>
     </div>
     <footer>
