--- a/cubos.html
+++ b/cubos.html
@@ -15,10 +15,13 @@
     <script src="GridFloor.js"></script>
     <script src="Resources.js"></script>
     <script src="cubos.js"></script>
-    
+    <script src="Background.js"></script>
   <title>Loja Cubo</title>
   </head>
   <body>
+    <div class="canvas-back">
+      <canvas id="canvas"></canvas>
+    </div>
     <header>
       <div>
       <img src="pngwing.com.png" alt="Logo" width="50" height="50">
