--- a/Loja.html
+++ b/Loja.html
@@ -3,10 +3,14 @@
   <head>
     <link rel="icon" href="minecraft-icon-16x16-22.png" type="image/png">
     <link rel="stylesheet" type="text/css" href="Loja.css">
+    <script src="Background.js"></script>
     <script src="Carrinho.js"></script>
   <title>Loja Cubo</title>
   </head>
   <body>
+    <div class="canvas-back">
+      <canvas id="canvas"></canvas>
+    </div>
     <header>
       <div>
       <img src="pngwing.com.png" alt="Logo" width="50" height="50">
@@ -29,7 +33,7 @@
       <a href="cubo1.html">
         <p class="canvas-description">Clique para ver o Produto em 3D</p>
       <img src="Grass_Block.png" alt="Cubo de Grama">
-      <p class="canvas-description">Cubo de Grama</p>
+      <p class="canvas-description">Cubo de Grama $1,99</p>
       </a>
       <button onclick="addToCart('Grass_Block.png','Cubo de Grama', 1.99)">Adicionar ao carrinho</button>
       </div>
@@ -37,7 +41,7 @@
       <a href="cubo2.html">
       <p class="canvas-description">Clique para ver o Produto em 3D</p>
       <img src="Log.png" alt="Cubo de um Tronco de Árvore">
-      <p class="canvas-description">Cubo de um Tronco de Árvore</p>
+      <p class="canvas-description">Cubo de um Tronco de Árvore $9,99</p>
       </a>
       <button onclick="addToCart('Log.png','Cubo de um Tronco de Árvore', 9.99)">Adicionar ao carrinho</button>
       </div>
@@ -45,7 +49,7 @@
       <a href="cubo3.html"> 
       <p class="canvas-description">Clique para ver o Produto em 3D</p> 
       <img src="Chest_Pre-Beta_1.8.png" alt="Cubo de um Bau">
-      <p class="canvas-description">Cubo de um Bau</p>
+      <p class="canvas-description">Cubo de um Bau $19,99</p>
       </a>
       <button onclick="addToCart('Chest_Pre-Beta_1.png','Cubo de um Bau', 19.99)">Adicionar ao carrinho</button>
       </div>
@@ -53,14 +57,14 @@
       <a href="cubo4.html">
       <p class="canvas-description">Clique para ver o Produto em 3D</p>
       <img src="Carved_Pumpkin.png" alt="Cubo de uma Abobora de Helloween">
-      <p class="canvas-description">Cubo de uma Abobora de Helloween</p>
+      <p class="canvas-description">Cubo de uma Abobora de Helloween $29,99</p>
       </a>
       <button onclick="addToCart('Carved_Pumpkin.png','Cubo de uma Abobora de Helloween', 29.99)">Adicionar ao carrinho</button>      </div>
       <div class="canvas-cubos">
       <a href="cubo5.html">
       <p class="canvas-description">Clique para ver o Produto em 3D</p>
       <img src="Dinamite.png" alt="Cubo de uma TNT">
-      <p class="canvas-description">Cubo de uma TNT</p>
+      <p class="canvas-description">Cubo de uma TNT $999,99</p>
       </a>
       <button onclick="addToCart('Dinamite.png','Cubo de uma TNT<', 999.99)">Adicionar ao carrinho</button>
       </div>
@@ -68,7 +72,7 @@
       <a href="cubo6.html">
       <p class="canvas-description">Clique para ver o Produto em 3D</p>
       <img src="Diamond_Ore_JE5_BE5.png" alt="Cubo de Minerio de Diamante">
-      <p class="canvas-description">Cubo de Minerio de Diamante</p>
+      <p class="canvas-description">Cubo de Minerio de Diamante $1999,99</p>
       </a>
       <button onclick="addToCart('Diamond_Ore_JE5_BE5.png','Cubo de Minerio de Diamante', 1999.99)">Adicionar ao carrinho</button>
       </div>
