--- a/cubo3.html
+++ b/cubo3.html
@@ -15,10 +15,14 @@
     <script src="GridFloor.js"></script>
     <script src="Resources.js"></script>
     <script src="cubo3.js"></script>
-    
+    <script src="Carrinho.js"></script>
+    <script src="Background.js"></script>
   <title>Loja Cubo</title>
   </head>
   <body>
+    <div class="canvas-back">
+      <canvas id="canvas"></canvas>
+    </div>
     <header>
       <div>
       <img src="pngwing.com.png" alt="Logo" width="50" height="50">
@@ -38,7 +42,8 @@
     </header>
       <div class="canvas-cubos">
       <canvas id="glcanvas3"></canvas>
-      <p class="canvas-description">Cubo de um Bau</p>
+      <p class="canvas-description">Cubo de um Bau $19,99</p>
+      <button onclick="addToCart('Chest_Pre-Beta_1.png','Cubo de um Bau', 19.99)">Adicionar ao carrinho</button>
       </div>
     </div>
     <footer>
