--- a/cubo5.html
+++ b/cubo5.html
@@ -15,10 +15,14 @@
     <script src="GridFloor.js"></script>
     <script src="Resources.js"></script>
     <script src="cubo5.js"></script>
-    
+    <script src="Carrinho.js"></script>
+    <script src="Background.js"></script>
   <title>Loja Cubo</title>
   </head>
   <body>
+    <div class="canvas-back">
+      <canvas id="canvas"></canvas>
+    </div>
     <header>
       <div>
       <img src="pngwing.com.png" alt="Logo" width="50" height="50">
@@ -38,7 +42,8 @@
     </header>
       <div class="canvas-cubos">
       <canvas id="glcanvas5"></canvas>
-      <p class="canvas-description">Cubo de uma TNT</p>
+      <p class="canvas-description">Cubo de uma TNT $999,99</p>
+      <button onclick="addToCart('Dinamite.png','Cubo de uma TNT<', 999.99)">Adicionar ao carrinho</button>
       </div>
     </div>
     <footer>
