--- a/Loja.html
+++ b/Loja.html
@@ -3,6 +3,17 @@
   <head>
     <link rel="icon" href="minecraft-icon-16x16-22.png" type="image/png">
     <link rel="stylesheet" type="text/css" href="Loja.css">
+    <script src="gl.js"></script>
+    <script src="Math.js"></script>
+    <script src="Shaders.js"></script>
+    <script src="RenderLoop.js"></script>
+    <script src="Transform.js"></script>
+    <script src="Modal.js"></script>
+    <script src="Primatives.js"></script>
+    <script src="Camera.js"></script>
+    <script src="Debug.js"></script>
+    <script src="GridFloor.js"></script>
+    <script src="Resources.js"></script>
     <script src="Background.js"></script>
     <script src="Carrinho.js"></script>
   <title>Loja Cubo</title>
