--- a/Loja.html
+++ b/Loja.html
@@ -46,7 +46,7 @@
       <img src="Grass_Block.png" alt="Cubo de Grama">
       <p class="canvas-description">Cubo de Grama $1,99</p>
       </a>
-      <button onclick="addToCart('Grass_Block.png','Cubo de Grama', 1.99)">Adicionar ao carrinho</button>
+      <button onclick="addcart('Grass_Block.png','Cubo de Grama', 1.99)">Adicionar ao carrinho</button>
       </div>
       <div class="canvas-cubos">
       <a href="cubo2.html">
@@ -54,7 +54,7 @@
       <img src="Log.png" alt="Cubo de um Tronco de Árvore">
       <p class="canvas-description">Cubo de um Tronco de Árvore $9,99</p>
       </a>
-      <button onclick="addToCart('Log.png','Cubo de um Tronco de Árvore', 9.99)">Adicionar ao carrinho</button>
+      <button onclick="addcart('Log.png','Cubo de um Tronco de Árvore', 9.99)">Adicionar ao carrinho</button>
       </div>
       <div class="canvas-cubos">
       <a href="cubo3.html"> 
@@ -62,7 +62,7 @@
       <img src="Chest_Pre-Beta_1.8.png" alt="Cubo de um Bau">
       <p class="canvas-description">Cubo de um Bau $19,99</p>
       </a>
-      <button onclick="addToCart('Chest_Pre-Beta_1.png','Cubo de um Bau', 19.99)">Adicionar ao carrinho</button>
+      <button onclick="addcart('Chest_Pre-Beta_1.png','Cubo de um Bau', 19.99)">Adicionar ao carrinho</button>
       </div>
       <div class="canvas-cubos">
       <a href="cubo4.html">
@@ -70,14 +70,14 @@
       <img src="Carved_Pumpkin.png" alt="Cubo de uma Abobora de Helloween">
       <p class="canvas-description">Cubo de uma Abobora de Helloween $29,99</p>
       </a>
-      <button onclick="addToCart('Carved_Pumpkin.png','Cubo de uma Abobora de Helloween', 29.99)">Adicionar ao carrinho</button>      </div>
+      <button onclick="addcart('Carved_Pumpkin.png','Cubo de uma Abobora de Helloween', 29.99)">Adicionar ao carrinho</button>      </div>
       <div class="canvas-cubos">
       <a href="cubo5.html">
       <p class="canvas-description">Clique para ver o Produto em 3D</p>
       <img src="Dinamite.png" alt="Cubo de uma TNT">
       <p class="canvas-description">Cubo de uma TNT $999,99</p>
       </a>
-      <button onclick="addToCart('Dinamite.png','Cubo de uma TNT<', 999.99)">Adicionar ao carrinho</button>
+      <button onclick="addcart('Dinamite.png','Cubo de uma TNT', 999.99)">Adicionar ao carrinho</button>
       </div>
       <div class="canvas-cubos">
       <a href="cubo6.html">
@@ -85,7 +85,7 @@
       <img src="Diamond_Ore_JE5_BE5.png" alt="Cubo de Minerio de Diamante">
       <p class="canvas-description">Cubo de Minerio de Diamante $1999,99</p>
       </a>
-      <button onclick="addToCart('Diamond_Ore_JE5_BE5.png','Cubo de Minerio de Diamante', 1999.99)">Adicionar ao carrinho</button>
+      <button onclick="addart('Diamond_Ore_JE5_BE5.png','Cubo de Minerio de Diamante', 1999.99)">Adicionar ao carrinho</button>
       </div>
     </div>
     <footer>
