--- a/cubo2.html
+++ b/cubo2.html
@@ -39,7 +39,7 @@
     <div class="canvas-cubos"> 
       <canvas id="glcanvas2"></canvas>
       <p class="canvas-description">Cubo de um Tronco de Árvore $9,99</p>
-      <button onclick="addToCart('Log.png','Cubo de um Tronco de Árvore', 9.99)">Adicionar ao carrinho</button>
+      <button onclick="addcart('2','Log.png','Cubo de um Tronco de Árvore', 9.99)">Adicionar ao carrinho</button>
       </div>
     </div>
     <footer>
