--- a/cubo4.html
+++ b/cubo4.html
@@ -39,7 +39,7 @@
       <div class="canvas-cubos">
       <canvas id="glcanvas4"></canvas>
       <p class="canvas-description">Cubo de uma Abobora de Helloween $29,99</p>
-      <button onclick="addToCart('Carved_Pumpkin.png','Cubo de uma Abobora de Helloween', 29.99)">Adicionar ao carrinho</button>  
+      <button onclick="addcart('4','Carved_Pumpkin.png','Cubo de uma Abobora de Helloween', 29.99)">Adicionar ao carrinho</button>  
       </div>>
     </div>
     <footer>
