--- a/cubo5.html
+++ b/cubo5.html
@@ -39,7 +39,7 @@
       <div class="canvas-cubos">
       <canvas id="glcanvas5"></canvas>
       <p class="canvas-description">Cubo de uma TNT $999,99</p>
-      <button onclick="addToCart('Dinamite.png','Cubo de uma TNT<', 999.99)">Adicionar ao carrinho</button>
+      <button onclick="addcart('5','Dinamite.png','Cubo de uma TNT<', 999.99)">Adicionar ao carrinho</button>
       </div>
     </div>
     <footer>
