--- a/cubos.html
+++ b/cubos.html
@@ -15,7 +15,7 @@
     <script src="GridFloor.js"></script>
     <script src="Resources.js"></script>
     <script src="cubos.js"></script>
-  <title>Loja Cubo</title>
+  <title>Loja Cubo - Visualizar Tudo</title>
   </head>
   <body>
     <header>
