--- a/cubo1.html
+++ b/cubo1.html
@@ -39,7 +39,7 @@
     <div class="canvas-cubos"> 
       <canvas id="glcanvas1"></canvas>
       <p class="canvas-description">Cubo de Grama $1,99</p>
-      <button onclick="addToCart('Grass_Block.png','Cubo de Grama', 1.99)">Adicionar ao carrinho</button>
+      <button onclick="addcart('Grass_Block.png','Cubo de Grama', 1.99)">Adicionar ao carrinho</button>
       </div>
     </div>
     <footer>
