--- a/cubo3.html
+++ b/cubo3.html
@@ -39,7 +39,7 @@
       <div class="canvas-cubos">
       <canvas id="glcanvas3"></canvas>
       <p class="canvas-description">Cubo de um Bau $19,99</p>
-      <button onclick="addToCart('Chest_Pre-Beta_1.png','Cubo de um Bau', 19.99)">Adicionar ao carrinho</button>
+      <button onclick="addcart('3','Chest_Pre-Beta_1.png','Cubo de um Bau', 19.99)">Adicionar ao carrinho</button>
       </div>
     </div>
     <footer>
