--- a/cubo6.html
+++ b/cubo6.html
@@ -39,7 +39,7 @@
       <div class="canvas-cubos">
       <canvas id="glcanvas6"></canvas>
       <p class="canvas-description">Cubo de Minerio de Diamante $1999,99</p>
-      <button onclick="addToCart('Diamond_Ore_JE5_BE5.png','Cubo de Minerio de Diamante', 1999.99)">Adicionar ao carrinho</button>
+      <button onclick="addcart('6','Diamond_Ore_JE5_BE5.png','Cubo de Minerio de Diamante', 1999.99)">Adicionar ao carrinho</button>
       </div>
     </div>
     <footer>
