--- a/Loja.html
+++ b/Loja.html
@@ -85,7 +85,7 @@
       <img src="Diamond_Ore_JE5_BE5.png" alt="Cubo de Minerio de Diamante">
       <p class="canvas-description">Cubo de Minerio de Diamante $1999,99</p>
       </a>
-      <button onclick="addart('Diamond_Ore_JE5_BE5.png','Cubo de Minerio de Diamante', 1999.99)">Adicionar ao carrinho</button>
+      <button onclick="addcart('Diamond_Ore_JE5_BE5.png','Cubo de Minerio de Diamante', 1999.99)">Adicionar ao carrinho</button>
       </div>
     </div>
     <footer>
